--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@
 TEMPORAL_TASK_QUEUE_NAME: activityPlanTaskQueue
 TEMPORAL_FEEDBACK_TASK_QUEUE_NAME: feedbackActivityTaskQueue
 
+server:
+  port: 8086
 temporal:
   activity-plan:
     task-queue-name: ${TEMPORAL_TASK_QUEUE_NAME}
